<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TarockBlock</string>
    <string name="start_header">Bisherige Partien</string>
    <string name="button_last_session_continue">Letzte Partie fortsetzen</string>
    <string name="button_session_new">Neue Partie</string>
    <string name="action_sync">Sync</string>
    <string name="action_rules">Regelwerk</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_info">Info</string>
    <string name="action_exit">Beenden</string>
    <string name="action_trischaken">Regeln Trischaken</string>
    <string name="action_bei">Regeln Negativspiel Bei</string>
    <string name="action_kontra">Höchste Kontrierung</string>
    <string name="title_sessions">Partien</string>
    <string name="title_session_old">Partie</string>
    <string name="button_settings">Einstellungen</string>
    <string name="button_sessions">Partien</string>
    <string name="button_session_continue">Partie fortsetzen</string>
    <string name="button_games_sofar">Bisherige Spiele</string>
    <string name="title_session_new">Neue Partie</string>
    <string name="button_start">Los</string>
    <string name="dealer_first">1. Geber</string>
    <string name="forehand_first">1. Vorhand</string>
    <string name="player_3">Spieler 3</string>
    <string name="player_4">Spieler 4</string>
    <string name="player_5">Spieler 5</string>
    <string name="title_session_active">Aktuelle Partie</string>
    <string name="button_game_edit_last">Letztes Spiel bearbeiten</string>
    <string name="button_game_new">Neues Spiel</string>
    <string name="title_game_edit_last">Letztes Spiel</string>
    <string name="title_games_sofar">Bisherige Spiele</string>
    <string name="title_game_details">Spieldetails</string>
    <string name="title_game_call">Spielansage</string>
    <string name="title_game_trischaken">Trischaken</string>
    <string name="title_game_regular">Abrechnung Regulär</string>
    <string name="button_premiums_called">Angesagte Prämien</string>
    <string name="button_kontra">Kontrierungen</string>
    <string name="button_premiums_silent">Stille Prämien</string>
    <string name="button_save">Speichern</string>
    <string name="button_delete">Löschen</string>
    <string name="title_game_player">Spieler</string>
    <string name="title_game_negative">Abrechnung Negativ</string>
    <string name="button_game_bei">Spiel Bei</string>
    <string name="title_game_negative_bei">Spiel Bei</string>
    <string name="game_premiums_silent">Stille Prämien</string>
    <string name="game_premiums_called">Angesagte Prämien</string>
    <string name="game_kontra">Kontrierungen</string>
    <string name="title_settings">Einstellungen</string>
    <string name="button_player">Spieler</string>
    <string name="button_tariffsets">Tarifsets</string>
    <string name="button_imexport">Import/Export</string>
    <string name="button_sync">Synchronisieren</string>
    <string name="button_theme">Theme</string>
    <string name="title_settings_player">Spieler</string>
    <string name="button_player_new">Neuer Spieler</string>
    <string name="title_settings_player_new">Neuer Spieler</string>
    <string name="title_settings_tariffs">Tarifsets</string>
    <string name="button_tariff_new">Neues Tarifset</string>
    <string name="title_settings_tariff">Tarifset</string>
    <string name="title_settings_tariff_new">Neues Tarifset</string>
    <string name="button_tariff_new_trischaken">Trischaken</string>
    <string name="button_tariff_new_bei">Negativspiel Bei</string>
    <string name="button_tariff_new_kontra">Höchste Kontrierung</string>
    <string name="button_tariff_new_entry">Neuer Eintrag</string>
    <string name="title_settings_tariff_new_trischaken">Trischaken</string>
    <string name="title_settings_tariff_new_tariff">Neue Spielansage</string>
    <string name="title_settings_tariff_new_premium">Neue Prämie</string>
    <string name="title_settings_tariff_new_bei">Negativspiel Bei</string>
    <string name="text_settings_tariff_new_bei_1">Keine Negativspiele Bei erlaubt</string>
    <string name="text_settings_tariff_new_bei_2">Nur Piccolo/Zwiccolo Bei erlaubt</string>
    <string name="text_settings_tariff_new_bei_3">Nur Bettler Bei erlaubt</string>
    <string name="text_settings_tariff_new_bei_4">Nur gleichwertige Spiele Bei erlaubt</string>
    <string name="text_settings_tariff_new_bei_5">Alle Negativspiele Bei möglich</string>
    <string name="title_settings_tariff_new_kontra">Höchste Kontrierung</string>
    <string name="text_settings_tariff_new_kontra_1">Kontra (2x)</string>
    <string name="text_settings_tariff_new_kontra_2">Rekontra (4x)</string>
    <string name="text_settings_tariff_new_kontra_3">Subkontra (8x)</string>
    <string name="text_settings_tariff_new_kontra_4">Subrekontra (16x)</string>
    <string name="title_settings_imexport">Import/Export</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="title_settings_sync">Synchronisieren</string>
    <string name="button_sync_now">Synchronisieren</string>
    <string name="title_info">Info</string>
    <string name="title_rules">Regelwerk</string>
    <string name="title_exit">Beenden</string>
    <string name="settings_theme_default_name">Holo Hell</string>
    <string name="title_settings_theme">Theme auswählen</string>
    <string name="settings_theme_default">0</string>
    <string name="preference_file">prefs</string>
    <string name="preference_theme_var">pref_theme</string>
    <string name="session_name">Partie Name</string>
    <string name="player">Spieler</string>
    <string name="menu_default">Als Standard festlegen</string>
    <string name="menu_edit">Name ändern</string>
    <string name="menu_delete">Löschen</string>
    <string name="menu_edit_dialog">Name ändern</string>
    <string name="menu_delete_dialog">Spieler löschen</string>
    <string name="player_new_dialog">Neuer Spieler</string>
    <string name="menu_tariffset_new_dialog">Neues Tarifset basierend auf</string>
    <string name="menu_delete_dialog_session">Soll die Partie und alle damit verbundenen Spiele wirklich gelöscht werden?</string>
    <string name="menu_delete_dialog_player">Soll der Spieler und alle damit verbundenen Partien und Spiele wirklich gelöscht werden?</string>
     <string name="menu_delete_dialog_tariffset">Soll das Tarifset und alle damit verbundenen Partien und Spiele wirklich gelöscht werden?</string>
     <string name="menu_delete_dialog_tariff">Soll der Tarif wirklich gelöscht werden?</string>
    <string name="settings_tariff_new_bei_default">Nur gleichwertige Spiele Bei erlaubt</string>
    <string name="settings_tariff_new_kontra_default">Subkontra (8x)</string>
    <string name="settings_tariff_new_trischaken_default1">2 Punktesieger zahlen</string>
    <string name="settings_tariff_new_trischaken_default2">Bürgermeister zahlt doppelt</string>
    <string name="settings_tariff_new_trischaken_default3">Vorhand zahlt doppelt</string>

    <string name="tariffset_tri1">Wieviele Punktesieger zahlen?</string>
        <string name="tariffset_tri2">Bürgermeister doppelt?</string>
        <string name="tariffset_tri3">Vorhand doppelt?</string>
        

</resources>